--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: "Aaron Graifman's Resume"
+author: Aaron Graifman
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -47,18 +47,17 @@ Aside
 ================================================================================
 
 
-![logo](beta_dist.png){width=100%}
+![logo](aaron-headshot.jpg)
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> aaronmgraifman@gmail.com
+- <i class="fa fa-linkedin"></i> linkedin.com/in/aaron-graifman
+- <i class="fa fa-github"></i> github.com/aaron13g
+
 
 
 
@@ -69,34 +68,13 @@ Language Skills {#skills}
 ```{r}
 skills <- tribble(
   ~skill,               ~level,
-  "R",                  5,
-  "Javascript (d3.js)", 4.5,
-  "Python",             4,
-  "Bash",               3.5,
-  "SQL",                3,
-  "C++",                3,
-  "AWK",                3
+  "R",                  3,
+  "Python",             2,
+  "C++",                2,
+  "Tableau",            3
 )
 build_skill_bars(skills)
 ```
-
-
-
-Open Source Contributions {#open-source}
---------------------------------------------------------------------------------
-
-All projects available at `github.com/nstrayer/<name>`
-
-
-- `shinysense`: R package to use sensor data in Shiny apps
-- `tuftesque`: Hugo theme (behind LiveFreeOrDichotomize.com)
-- `slid3r`: D3 add-on for fully svg slider inputs
-
-
-More info {#more-info}
---------------------------------------------------------------------------------
-
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
 
 
 Disclaimer {#disclaimer}
@@ -114,14 +92,13 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Aaron Graifman {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
+intro_text <- "Graduate student in Program Evaluation and Data Analytics working in a public sector data environment. I develop dashboards and visualizations in Tableau and conduct ad hoc analyses using administrative program data to support operational and policy questions.
 
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
-"
+My work focuses on clear communication of findings and translating data into actionable insight. I am continuing to expand my skills in R and applied statistical methods."
 
 
 cat(sanitize_links(intro_text))
@@ -145,12 +122,15 @@ Selected Positions {data-icon=suitcase}
 position_data %>% print_section('positions')
 ```
 
-Selected Writing {data-icon=newspaper}
---------------------------------------------------------------------------------
+
 
 
 ```{r}
-position_data %>% print_section('writings')
+#> Note to self, when wanting to put writings in copy the bottom few lines and put them back up to the top above this
+#Selected Writing {data-icon=newspaper}
+#--------------------------------------------------------------------------------
+
+#position_data %>% print_section('writings')
 ```
 
 
