Add professional and academic projects to resume
Added Empowering Enrollment Dashboard and CalFresh monitoring work under professional projects. Added graduate and capstone projects under academic projects section and updated resume layout to print new sections.

--- a/index.Rmd
+++ b/index.Rmd
@@ -122,7 +122,19 @@ Selected Positions {data-icon=suitcase}
 position_data %>% print_section('positions')
 ```
 
+Selected Professional Projects {data-icon=chart-bar}
+--------------------------------------------------------------------------------
 
+```{r}
+position_data %>% print_section('projects')
+```
+
+Academic Projects {data-icon=laptop-code}
+--------------------------------------------------------------------------------
+
+```{r}
+position_data %>% print_section('academic_projects')
+```
 
 
 ```{r}
